// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders coral_light variant with message containing a link 1`] = `
.c1 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c1 span {
  font-size: inherit;
  line-height: inherit;
}

.c4 {
  position: relative;
  display: inline;
  color: #000000;
  font-weight: normal;
}

.c4:hover,
.c4:focus {
  color: #000000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  background-color: #FFCECE;
  border-radius: 1rem;
  padding: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  gap: 1rem;
  box-sizing: border-box;
  width: 100%;
}

.c2 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
  font-weight: 700;
  margin: 0;
}

.c3 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
  margin: 0;
}

.c3 a {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media (min-width:740px) {
  .c1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c1 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {
  .c2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c2 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {
  .c3 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c3 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

<div
  className="c0"
  data-testid="info-message"
>
  <p
    className="c1 c2"
  >
    Please check your donation
  </p>
  <p
    className="c1 c3"
  >
    You can only donate between £1.00 and £25,000.00 at a time. If you need help,
     
    <a
      className="c4"
      href="/contact"
      target="_self"
      type="standard"
    >
      contact us
    </a>
    .
  </p>
</div>
`;

exports[`renders default blue_light variant 1`] = `
.c1 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c1 span {
  font-size: inherit;
  line-height: inherit;
}

.c0 {
  background-color: #BECCF9;
  border-radius: 1rem;
  padding: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  gap: 1rem;
  box-sizing: border-box;
  width: 100%;
}

.c2 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
  font-weight: 700;
  margin: 0;
}

.c3 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
  margin: 0;
}

.c3 a {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media (min-width:740px) {
  .c1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c1 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {
  .c2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c2 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:740px) {
  .c3 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c3 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

<div
  className="c0"
  data-testid="info-message"
>
  <p
    className="c1 c2"
  >
    Are you trying to pay in your fundraising money?
  </p>
  <p
    className="c1 c3"
  >
    If you are, please select the ‘Pay in Fundraising’ tab above. If not, please continue with your donation.
  </p>
</div>
`;
